--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   </context-param>
     <context-param>
         <param-name>javax.faces.CONFIG_FILES</param-name>
-        <param-value>/RecursoMapper.xml</param-value>
+        <param-value>/mappers/RecursoMapper.xml</param-value>
     </context-param>
     <display-name>Archetype Created Web Application</display-name>
   <servlet>
