solucion de problemas debido al cambio en la DB

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -14,8 +14,8 @@ dataSource.password = 4db64dff78a90452389b0e21aa089965316832b3fc9fb7771a487552ce
 jdbcRealm.dataSource = $dataSource
 
 
-jdbcRealm.authenticationQuery = SELECT contraseña FROM usuarios WHERE correo = ?
-jdbcRealm.userRolesQuery = SELECT tipo FROM usuarios WHERE correo = ?
+jdbcRealm.authenticationQuery = SELECT contraseña FROM usuarios WHERE email = ?
+jdbcRealm.userRolesQuery = SELECT tipo FROM usuarios WHERE email = ?
 
 authc.loginUrl = /faces/login.xhtml
 
