Adelanto de control de errores por parte grafica, solucion de algunas observaciones e inicio de la vista y back de reservas

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,5 +40,6 @@
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>INCLUDE</dispatcher>
     <dispatcher>ERROR</dispatcher>
+    <dispatcher>ASYNC</dispatcher>
   </filter-mapping>
 </web-app>
