--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>shiro-web</artifactId>
             <version>1.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.2.4</version>
+        </dependency>
 
         <!-- Logging dependencies -->
         <dependency>
