Ocultar componentes dependiendo el rol

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -27,3 +27,11 @@ credentialsMatcher.storedCredentialsHexEncoded = true
 
 onlynot = edu.eci.cvds.security.OnlyNotAutenticate
 onlynot.welcomeurl = /faces/index.xhtml
+
+[roles]
+admin=*
+estudiante=*
+
+[users]
+admin=admin,admin
+yesid.mora=12345,estudiante
